# bf1_internal

./: .gitignore  CMakeLists.txt
Browser/: Browser.manifest  CMakeLists.txt
Browser/Configs/: default.json
Browser/Source/: main.cpp
Injector/: CMakeLists.txt
Injector/Include/: stdafx.h
Injector/Source/: main.cpp
Module/: CMakeLists.txt  Inject.bat
Module/Include/: AimCurve.h  AimCurve.inl  Aimbot.h  AutoSpot.h  Camera.h  ClassDecl.h  Cleaner.h  ClientGame.h  ClientPlayer.h  Config.h  Crypto.h  D3DBlob.h  D3DCommon.h  D3DHooks.h  D3DIndicators.h  D3DRenderer.h  D3DRenderer.inl  D3DXRay.h  D3DXRay.inl  Defines.h  Dx11Texture.h  Eastl.h  EmulateLmd.h  FnTraits.h  FnValue.h  Function.h  Game.h  GameHooks.h  GamePatcher.h  Globals.h  Hooks.h  Hooks.inl  InputController.h  Instruction.h  Lock.h  Logger.h  MemoryInterface.h  MemoryInterface.inl  Offsets.h  Projectile.h  (+11 more)
Module/Lib/: Hyper.h
Module/Lib/Hyper/: Float16.h  Float32.h  Math.h  MathDefines.h  Matrix.h  Memory.h  Plane.h  Point.h  Quaternion.h  Rotation.h  SSE.h  SSEConstants.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
Module/Lib/tsl/: hopscotch_hash.h
Module/Shaders/: Box.hlsl  CharmXRay.hlsl  Quad.hlsl  Sample.hlsl
Module/Source/: AimCurve.cpp  Aimbot.cpp  AutoSpot.cpp  Cleaner.cpp  ClientPlayer.cpp  Crypto.cpp  D3DCommon.cpp  D3DHooks.cpp  D3DIndicators.cpp  D3DRenderer.cpp  Game.cpp  GameHooks.cpp  GamePatcher.cpp  Globals.cpp  Hooks.cpp  Hyper.cpp  InputController.cpp  Logger.cpp  MemoryInterface.cpp  Projectile.cpp  ProjectileTrajectory.cpp  Quelle.cpp  RenderFunctions.cpp  RenderHooks.cpp  Shader.cpp  UI_Cef.cpp  Utility.cpp  dllmain.cpp
Module/Source/Assembly/: HooksMid.asm
UI/: CMakeLists.txt  README.md  package-lock.json  package.json  vue.config.js
UI/public/: index.css  index.html
UI/src/: App.vue
UI/src/plugins/: vuetify.js
